[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = ""
authors = ["delphine_rabiller <delphine.rabiller@freeagent.com>"]
readme = "README.md"
packages = [{include = "advent_of_code"}]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
regex = "^2023.10.3"
numpy = "^1.26.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
